--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,5 @@
-server.port=8080
+server.port=80
+server.servlet.context-path=/api
 spring.data.mongodb.uri=mongodb+srv://mongotest:mongotest@cluster0.5owwa.mongodb.net/mydb?retryWrites=true&w=majority
+
+clientname=application.prop-client-configmap
