--- a/mongo-k8s.yml
+++ b/mongo-k8s.yml
@@ -1,14 +1,26 @@
+apiVersion: v1
+kind: Namespace
+metadata:
+  name: NAMESPACE
+
+---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: mongopro
+  namespace: NAMESPACE
   labels:
     app: mongopro
 spec:
-  replicas: 1
+  replicas: 2
   selector:
     matchLabels:
       app: mongopro
+  strategy:
+     type: RollingUpdate
+     rollingUpdate:
+       maxSurge: 1
+       maxUnavailable: 0                  
   template:
     metadata:
       labels:
@@ -25,6 +37,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: mongoservice
+  namespace: NAMESPACE
   labels:
     app: mongopro
 spec:
