--- a/mongo-k8s.yml
+++ b/mongo-k8s.yml
@@ -7,15 +7,15 @@ metadata:
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: mongopro
+  name: productpage
   namespace: NAMESPACE
   labels:
-    app: mongopro
+    app: productpage
 spec:
-  replicas: 2
+  replicas: 1
   selector:
     matchLabels:
-      app: mongopro
+      app: productpage
   strategy:
      type: RollingUpdate
      rollingUpdate:
@@ -24,27 +24,28 @@ spec:
   template:
     metadata:
       labels:
-        app: mongopro
+        app: productpage
     spec:
       containers:
-      - name: mongopro
-        image: dockerrock123/mongodb-inst:v1
+      - name: productpage
+        image: dockerrock123/mongodb-k8s:v1
         imagePullPolicy: Always
         ports:
-        - containerPort: 8080
+        - containerPort: 80
 ---
 apiVersion: v1
 kind: Service
 metadata:
-  name: mongoservice
+  name: productpage
   namespace: NAMESPACE
   labels:
-    app: mongopro
+    app: productpage
 spec:
   type: LoadBalancer
   ports:
   - port: 80
-    targetPort: 8080
+    name: http-productpage
+    targetPort: 80
     protocol: TCP
   selector:
-    app: mongopro
+    app: productpage
